# rx_challenge

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  example_file.csv  example_ulpload.csv
.github/workflows/: blank.yml  test.yml
alembic/: env.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2f819c3e266d_init_setup.py  3e6b75bb05ac_second_connection_test.py  dd1c56e90f5a_add_default_value_for_received_at_in_.py  facc6705dd50_init_setup.py
backend/app/: auth.py  main.py  settings.py  websocket.py
backend/app/api/: main.py
backend/app/api/constants/: http_status.py
backend/app/api/db/: database.py  models.py  script.sql  seed.py
backend/app/api/db/models/: __init__.py  equipment.py  equipment_data.py  user.py
backend/app/api/v1/endpoints/: equipments.py  equipments_data.py  token.py  upload.py  users.py
backend/app/api/v1/errors/: codes.py  handlers.py
backend/app/api/v1/schemas/: __init__.py  equipment.py  equipment_data.py  user.py
backend/backend/: main.py
backend/nginx/: nginx.conf
backend/tests/: conftest.py  test_auth.py  test_main.py
backend/tests/api/v1/: test_equipment.py  test_user.py
frontend/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/Autocomplete/: Autocomplete.stories.tsx  index.tsx
frontend/src/components/Button/: Button.stories.tsx  index.tsx
frontend/src/components/Chart/: index.tsx
frontend/src/components/Deposits/: index.tsx
frontend/src/components/Header/: index.tsx
frontend/src/components/Orders/: index.tsx
frontend/src/components/Providers/: index.tsx
frontend/src/components/Sidebar/: Appbar.tsx  Drawer.tsx  index.tsx
frontend/src/context/: EquipmentContext.tsx
frontend/src/models/: equipament.ts  equipament_data.ts
frontend/src/pages/Home/: index.tsx
frontend/src/pages/Home/sections/Average/: index.tsx
frontend/src/pages/Home/sections/Dashboard/: index.tsx
frontend/src/pages/Home/sections/Dashboard/components/Chart/: index.tsx
frontend/src/pages/Home/sections/Dashboard/components/Table/: index.tsx
frontend/src/pages/Home/sections/Hero/: index.tsx
frontend/src/pages/SignIn/: index.tsx
frontend/src/pages/SignOut/: index.tsx
frontend/src/services/: equipment.ts
frontend/src/styles/: ThemeContext.tsx  theme.ts
frontend/src/utils/: date.ts
